--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "dependencies": {
     "@types/react-redux": "6.0.9",
     "email-validator": "^2.0.4",
-    "gh-pages": "^2.0.1",
     "password-validator": "^4.1.1",
     "prop-types": "latest",
     "react": "16.5.2",
@@ -23,7 +22,9 @@
     "redux": "4.0.1",
     "redux-thunk": "2.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
