refactor app to work in github pages https://itnext.io/so-you-want-to-host-your-single-age-react-app-on-github-pages-a826ab01e48

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "keywords": [],
   "main": "src/index.js",
-  "homepage": "https://IvoIvanov77.github.io/react_explorer/",
+  "homepage": "https://IvoIvanov77.github.io/repo_explorer/",
   "dependencies": {
     "@types/react-redux": "6.0.9",
     "email-validator": "^2.0.4",
